--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,34 @@
 <head>
   <meta charset="utf-8">
   <title>CourseProject</title>
-  <base href="/">
+  <base href="http://localhost:4200/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!--     Fonts and icons     -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
+  <!-- CSS Files -->
+  <link href="./assets/bower_components/material-kit/assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/bower_components/material-kit/assets/css/material-kit.css" rel="stylesheet" /> 
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <footer>
+     <!--   Core JS Files   -->
+    <script src="./assets/bower_components/material-kit/assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/bower_components/material-kit/assets/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./assets/bower_components/material-kit/assets/js/material.min.js"></script>
+
+    <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+    <script src="./assets/bower_components/material-kit/assets/js/material-kit.js" type="text/javascript"></script>
+
+    <script src="./assets/bower_components/tinymce/jquery.tinymce.min.js"></script>
+    <script src="./assets/bower_components/tinymce/tinymce.min.js"></script>
+  </footer>
 </body>
 </html>
